<resources>
    <string name="app_name">畅驾</string>
    <string name="main_title">佛山电台FM92.4</string>
    <string name="url_server">http://app.fm924.com/ztmedia/resourceinfo.xml</string>
    <string name="version_code">2.0.1</string>
    <string name="server_url">http://218.104.177.210:8090/ztmedia/TrafficApi?action=</string>
    <string name="api_url">http://218.104.177.210:8090/ztmedia/TrafficApi</string>
    <string name="bl_req_url">InsertStcollect</string>
    <string name="setbaoguang_url">InsertShare</string>
    <string name="add_hdperson_url">InsertHdpersonByUid</string>
    <string name="huodong_url">GetHdinfoList</string>
	<string name="hditem_url">GetHdinfoByHdinfoid</string>
	<string name="carlife_url">GetHdcarlifeList</string>
	<string name="hd_pl_add_url">InsertHdinfoCommentByUid</string>
	<string name="hd_getpl_url">GetHdinfoCommentListByHdinfoid</string>
	<string name="hd_delmpl_url">DeleteHdinfocommentByHdinfocommentid</string>
	<string name="news_url">GetHdnewList</string>
	<string name="news_item_url">GetHdnewByHdnewid</string>
	<string name="news_pl_add_url">InsertHdnewCommentByUid</string>
	<string name="news_getpl_url">GetHdnewCommentListByHdnewid</string>
	<string name="news_delmpl_url">DeleteHdnewcommentByHdnewcommentid</string>
	<string name="hud_url">InsertHdCommentByUid</string>
	<string name="hud_chats_url">GetHdCommentListByHdmenuid</string>
	<string name="hud_delmchat_url">DeleteHdcommentByHdcommentid</string>
	<string name="delradiocommentlist_url">DeleteHdcommentreplyByHdcommentreplyid</string>
	<string name="stream_url">GetStreamUrl</string>
	<string name="currentlive_url">GetCurrentLive</string>
	<string name="choosereplay_url">GetHdreplaytypeList</string>
	<string name="replayitem_url">GetHdreplayListByHdreplaytypeid</string>
	<string name="updateheadimg_url">UpdateHeadimgByUid</string>
	<string name="fircarimg_url">UpdateFircarimgByUid</string>
	<string name="seccarimg_url">UpdateSeccarimgByUid</string>
	<string name="getuserinfo_url">GetHdpersonByUid</string>
	<string name="updateuserinfo_url">UpdateHdpersonByUid</string>
	<string name="getreplaypermission_url">GetHdreplaytypemenuByUid</string>
	<string name="updatereplayimg_url">UpdateImagepathByHdreplayid</string>
	<string name="getradiopermission_url">GetLiveImageByUid</string>
	<string name="updateradioimg_url">UpdateLiveImage</string>
	<string name="getweibopermission_url">GetHdweibodetailByUid</string>
	<string name="getbaoliaosort_url">GetStcollectCountList</string>
	<string name="getradioimg_url">GetLiveImage</string>
	<string name="gethomeinfo_url">GetIndexHdinfo</string>
	<string name="hd_baoming_url">InsertHdactivityresultByUid</string>
	<string name="carlife_tuangou_url">InsertHdgroupresultByUid</string>
	<string name="reporthuodong_url">UpdateHdinfocommentByHdinfocommentid</string>
	<string name="reportnews_url">UpdateHdnewcommentByHdnewcommentid</string>
	<string name="reportradio_url">UpdateHdcommentByHdcommentid</string>
	<string name="carframe_url">http://125.95.19.22/fsweixin/carframe/carFrameQuery.jsp#page1</string>
	<string name="roadinfoimage_url">http://125.95.19.22/fsweixin/carframe/framelink.jsp</string>
	<string name="space_carlife_url">GetHdcarlifeCommentListByUid</string>
	<string name="space_news_url">GetHdnewCommentListByUid</string>
	<string name="space_huodong_url">GetHdinfoCommentListByUid</string>
	<string name="space_baoming_url">GetHdactivityresultListByUid</string>
	<string name="space_tuangou_url">GetHdgroupresultListByUid</string>
	<string name="space_vote_url">GetHdvotelogListByUid</string>
	<string name="space_radiohudong_url">GetHdCommentListByUid</string>
	<string name="delbaoming_url">DeleteHdactivityresultByHdactivityresultid</string>
	<string name="deltuangou_url">DeleteHdgroupresultByHdgroupresultid</string>
	<string name="getbaoliao_url">GetStcollectList</string>
	<string name="getbaoguang_url">GetShareList</string>
	<string name="getwelcomeimg_url">GetWelcomeImage</string>
	<string name="settotalinstallnum">InsertHdinstall</string>
	<string name="getbgdetailpl_url">GetStcollectreplyListByStcollectid</string>
	<string name="getradiodetailpl_url">GetHdcommentreplyListByHdcommentid</string>
	<string name="setbgdetailpl_url">InsertStcollectReply</string>
	<string name="setradiodetailpl_url">InsertHdcommentReply</string>
	<string name="delbgdetail_url">DeleteShareByStcollectid</string>
	<string name="delbgpl_url">DeleteStcollectreplyByStcollectreplyid</string>
	<string name="delbl_url">DeleteStcollectByStcollectid</string>
	<string name="setbggood_url">InsertStcollectlikeByUid</string>
	<string name="setradiogood_url">InsertHdcommentlikeByUid</string>
	<string name="getroadinfoimage_url">Getlmkzpath</string>
	<string name="getcarframe_url">Getczfwpath</string>
	<string name="getblacklist_url">CheckIsblacklistByUid</string>
	<string name="setuserouth_url">AuthHdpersonByUid</string>
	<string name="setclienttype_url">UpdateClientTypeAndNo</string>
	<string name="getnickname_url">CheckIsTextHasSensitiveWord</string>
	<string name="message_msglist_url">GetMsgList</string>
	<string name="message_awardlist_url">GetAwardList</string>
	<string name="message_msgdetail_url">GetMsgDetail</string>
	<string name="message_msgcardtid_url">GetHdagentnoticeRecords</string>
	<string name="setlogout_url">LogoutPersonByUid</string>
	<string name="qrcode_url">http://app.fm924.com/ztmedia/images/qrcode.png</string>
	<string name="text_url">GetList</string>
	<string name="trafficinfo_url">GetStstudiotxt</string>
    <string name="map_url">GetMapData</string>
    <string name="radiolist_url">GetLiveList</string>
    <string name="radiolive_url">GetCurrentLive</string>
    <string name="radiostream_url">GetStreamUrl</string>
    <string name="setvote_url">InsertHdvotelogByUid</string>
    <string name="getvote_url">GetHdvoteResultByHdvoteid</string>
    <string name="getsurveylist_url">GetHdsurveyvoteListByHdsurveyid</string>
    <string name="getsurveyoption_url">GetHdsurveyoptionListByHdsurveyvoteid</string>
    <string name="setsurvey_url">InsertHdsurveylogByUid</string>
    <string name="getsurvey_url">GetHdsurveyvoteResultByHdsurveyvoteid</string>
    <string name="gethdaudio_url">GetHdaudiotypeList</string>
    <string name="gethdaudiolist_url">GetHdaudioListByHdaudiotypeid</string>
    <string name="inserthdsecretletter_url">InsertHdsecretletter</string>
    <string name="delhdsecretletter_url">DeleteHdsecretletterById</string>
    <string name="register_url">register</string>
    <string name="sendsms_url">sendsms</string>
    <string name="updatepwd_url">updatepwd</string>
    <string name="email_matches">^([a-z0-9A-Z]+[-|\\.]?)+[a-z0-9A-Z]@([a-z0-9A-Z]+(-[a-z0-9A-Z]+)?\\.)+[a-zA-Z]{2,}$</string>
    <string name="mobile_matches">(13[0-9]|145|147|15[0|1|2|3|4|5|6|7|8|9]|17[0|1|2|3|4|5|6|7|8|9]|18[0|1|2|3|4|5|6|7|8|9])\\d{8}</string>
    <string name="expression_matches">\[em_[0-9]{1,3}\]</string>
    <string name="consumer_key">627628029</string>
    <string name="shakeweb_url">http://web.fm924.com/shake/api/downloadShake.jc?actId=402881e44af145d8014af14b139e0001</string>
    <string name="redirect_url">http://u.946.com.cn/user/oauth/sina/fm924.php</string>
    <string name="uid_url">https://api.weibo.com/2/account/get_uid.json</string>
    <string name="weiboinfo_url">https://api.weibo.com/2/users/show.json</string>
    <string name="qq_url">https://graph.qq.com/user/get_user_info</string>
    <string name="passport">http://u.946.com.cn/api/fm924/passport.php</string>
    <string name="bmapkey">m2yoUlkLAnGUPUQSzN75KrW5</string>
    <string name="n_map">路况地图</string>
    <string name="n_text">查路况</string>
    <string name="n_baoliao">报路况</string>
    <string name="n_baoguang">车友分享</string>
    <string name="n_mybaoguang">我要分享</string>
    <string name="n_zixun">精选</string>
    <string name="n_qingbao">精选活动</string>
    <string name="n_join">EASY • 互动</string>
    <string name="n_setting">设置/注册</string>
    <string name="n_weizhang">车主服务</string>
    <string name="n_radio">听广播</string>
    <string name="n_carlife">车生活</string>
    <string name="n_discovery">发现</string>
    <string name="n_video">音视频</string>
    <string name="vote">投票</string>
    <string name="setting">设置</string>
    <string name="woyaoshuoshuo">我要说说</string>
    <string name="woyaofatie">我要发帖</string>
    <string name="woyaopinglun">我要评论</string>
    <string name="userinfo">我</string>
    <string name="finishregister">完成注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="photo">相册</string>
    <string name="replay">节目重温</string>
    <string name="radio">正在直播</string>
    <string name="changepwd">修改密码</string>
    <string name="resetpwd">重设密码</string>
    <string name="changemobile">变更手机号</string>
    <string name="bindmobile">绑定手机号</string>
    <string name="validate">验证</string>
    <string name="novalidate">未认证</string>
    <string name="yesvalidate">已认证</string>
    <string name="carlife">车生活</string>
    <string name="mycar">我的座驾</string>
    <string name="mylicenceplate">我的车牌</string>
    <string name="licence_type">汽车类型</string>
    <string name="licence_name">爱车昵称</string>
    <string name="licence_name_hint">请为您的爱车取名</string>
    <string name="fristcar">第一辆车</string>
    <string name="secondcar">第二辆车</string>
    <string name="thirdcar">第三辆车</string>
    <string name="licence_no">车牌号码</string>
    <string name="licence_no_hint">请输入车牌号</string>
    <string name="licence_validation">资料验证</string>
    <string name="licence_engine">发动机号</string>
    <string name="licence_vin_hint">发动机或车架号后四位</string>
    <string name="licence_engine_hint">请输入发动机号</string>
    <string name="licenceplate_bind">违章快速查询</string>
    <string name="loginactivity_tips">使用畅驾账号登录</string>
    <string name="loginactivity_register">立即注册</string>
    <string name="registeractivity_register">注册畅驾账号</string>
    <string name="loginactivity_oauthlogin">使用第三方账号登录</string>
    <string name="loginactivity_oauthweibo">新浪微博登录</string>
    <string name="loginactivity_oauthqq">腾讯QQ登录</string>
    <string name="aboutapp">&#160;&#160;&#160;&#160;&#160;&#160;&#160;作为“百万汽车城”佛山唯一的主流专业交通媒体，佛山电台飞跃924（调频FM92.4）伴随城市交通建设不断发展，本地车载收听市场占有率持续稳居首位，成为百万车主首选电台。\n
     &#160;&#160;&#160;&#160;&#160;&#160;&#160;我们融合最前沿科技信息处理系统，接入城市智能管理体系，提供最权威、及时的交通、气象信息。同时，我们拥有由珠三角最专业的汽车节目主持人DJ Ken打造的《同车时代》、佛山首个举办个人“栋笃笑”的主持人萧桦坚主理的《马力全开》，以及《同步新空气》、《自在畅行》等一大批优秀广播栏目。\n
     &#160;&#160;&#160;&#160;&#160;&#160;&#160;2014年，飞跃924获批准作为佛山市人民政府应急广播频率，成为省内首家政府应急广播；同时，在“时代之声——2014年全国广播业综合实力调研活动”中，飞跃924被国家新闻出版广电总局及《中国广播影视》杂志社评为“全国最具综合实力市级广播频率”。\n
     &#160;&#160;&#160;&#160;&#160;&#160;&#160;基于强大的交通及气象信息资源，以及对驾车人士贴心服务的经验和能力、对汽车文化的独到理解和把握，我们诚意推出手机客户端“畅驾”，希望继续伴随您快乐起步，平安出行，让您的汽车生活更够意思。  
    </string>
    <string name="version">Version：2.0.1&#160;&#160;更新日期：2015/6/30</string>
    <string name="zhengtong">佛山市政通科技有限公司  技术支持</string>
    <string name="copyright">Copyright©2015 佛山电台FM92.4  版权所有</string>
    <string name="mobileandmail">手机</string>
    <string name="password_hint">6-12位密码</string>
    <string name="nickname_hint">昵称</string>
    <string name="valcode_hint">验证码</string>
    <string name="item_rehudong">节目互动</string>
    <string name="item_list">节目列表</string>
   	<string name="item_share">分享</string>
   	<string name="item_loc">定位</string>
   	<string name="item_baoliao">我报路况</string>
   	<string name="item_text">文字路况</string>
   	<string name="item_roadinfoimage">路面快照</string>
   	<string name="item_changbg">更换背景</string>
   	<string name="item_hd_all">全部</string>
   	<string name="item_hd_vote">投票调查</string>
   	<string name="item_hd_baoming">活动报名</string>
   	<string name="item_hd_general">节目精华</string>
   	<string name="item_hd_important">视频精选</string>
   	<string name="item_bg_myshared">我的分享</string>
   	<string name="item_bg_djshared">主持人分享</string>
   	<string name="item_all">全部</string>
    <string name="registerprotocol"><u>用户注册协议</u></string>
</resources>