<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/item_bg_baoguang"
          android:title="@string/n_mybaoguang"
          android:icon="@drawable/btn_bg_share"
          android:showAsAction="never"
          android:visible="false"
          />
    
    <item android:id="@+id/item_bg_shared"
          android:title="@string/item_all"
          android:showAsAction="never|withText"
          />
    
    <item android:id="@+id/item_bg_djshared"
        android:title="@string/item_bg_djshared"
        android:showAsAction="never|withText"
        />
    
    <item android:id="@+id/item_bg_myshared"
        android:title="@string/item_bg_myshared"
        android:showAsAction="never|withText"
        />
    
</menu>
