<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/item_re_share"
          android:title="@string/item_share"
          android:icon="@drawable/btn_item_share"
          android:showAsAction="always" />
    
    <item android:id="@+id/item_re_hudong"
          android:title="@string/item_rehudong"
          android:icon="@drawable/btn_item_pl"
          android:showAsAction="always" />
    
	<item android:id="@+id/item_re_list"
          android:title="@string/item_list"
          android:icon="@drawable/btn_item_list"
          android:showAsAction="always" />
	
	<item android:id="@+id/item_re_changbg"
          android:title="@string/item_changbg"
          android:showAsAction="ifRoom|withText" 
          android:visible="false"/>
	
</menu>
