<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:background="@color/white">

<ScrollView 
    android:id="@+id/sv_ab_show"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="12dp"
    android:layout_weight="1"
    >
<TextView 
    android:id="@+id/tv_ab_show"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_about_marginLeft"
    android:layout_marginRight="@dimen/activity_about_marginLeft"
    android:textSize="@dimen/activity_about_textSize"
    android:text="@string/aboutapp"
    android:textColor="#282828"
    android:lineSpacingExtra="5dp"
    />
</ScrollView>

<LinearLayout 
    android:id="@+id/ll_ab_version"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
	    android:id="@+id/tv_ab_copyright"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:textSize="12sp"
	    android:text="@string/copyright"
	    android:textColor="#999999"
	    android:gravity="center_horizontal"
	    android:textScaleX="1.12"/>
    
    <TextView
	    android:id="@+id/tv_ab_zt"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:textSize="11sp"
	    android:layout_marginTop="3dp"
	    android:text="@string/zhengtong"
	    android:textColor="#999999"
	    android:gravity="center_horizontal"
	    android:textScaleX="1.12"/>
    <TextView 
	    android:id="@+id/tv_ab_version"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textSize="11sp"
	    android:text="@string/version"
	    android:textColor="#999999"
	    android:gravity="center_horizontal"
	    android:layout_marginBottom="10dp"
	    android:layout_marginTop="3dp"
	    android:textScaleX="1.12"/>
</LinearLayout>


</LinearLayout>