<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/setting_bg" >
    
 <TextView 
    android:layout_width="fill_parent"
    android:layout_height="30dp"
    android:text="@string/registeractivity_register"
    android:paddingLeft="5dp"
    android:textSize="14sp"
    android:background="@drawable/et_login"
    android:gravity="center_vertical"
    android:textColor="#727272"
    />
 
	<RelativeLayout 
	    android:id="@+id/rl_reg_login"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
        android:background="@drawable/bg_listview_menu">
		<ImageView 
		    android:id="@+id/iv_reg_user"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="20dp"
        	android:layout_marginLeft="15dp"
        	android:layout_centerVertical="true"
		    android:background="@drawable/lo_user"
		    android:visibility="gone"
		    />
		<EditText
		    android:id="@+id/et_reg_user" 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:textColorHint="@color/hint_edittext"
		    android:layout_marginLeft="15dp"
		    android:layout_marginTop="5dp"
			android:layout_marginBottom="4dp"
			android:layout_marginRight="10dp"
			android:gravity="center_vertical"
		    android:layout_toRightOf="@id/iv_reg_user"
		    android:textSize="16sp"
		    android:textColor="#727272"
		    android:hint="@string/mobileandmail"
		    android:background="#ffffff"
			android:singleLine="true"
		    />
	</RelativeLayout>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:background="@color/list_view_divider"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    />
	<RelativeLayout 
	    android:id="@+id/rl_reg_pwd"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
        android:background="@drawable/bg_listview_menu">

    <ImageView 
		    android:id="@+id/iv_reg_pwd"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="20dp"
        	android:layout_marginLeft="15dp"
        	android:layout_centerVertical="true"
		    android:background="@drawable/lo_pwd"
		    android:visibility="gone"
		    />
	<EditText
	    android:id="@+id/et_reg_pwd"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:textColorHint="@color/hint_edittext"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_marginRight="10dp"
		android:gravity="center_vertical"
	    android:layout_toRightOf="@id/iv_reg_pwd"
		android:textSize="16sp"		
		android:textColor="#727272" 
		android:hint="@string/password_hint"
		android:background="#ffffff"
		android:inputType="textPassword"
		android:singleLine="true"/>     
	</RelativeLayout>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:background="@color/list_view_divider"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    />
	<RelativeLayout 
	    android:id="@+id/rl_reg_nickname"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
        android:background="@drawable/bg_listview_menu">

    <ImageView 
		    android:id="@+id/iv_reg_nickname"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="20dp"
        	android:layout_marginLeft="15dp"
        	android:layout_centerVertical="true"
		    android:background="@drawable/lo_pwd"
		    android:visibility="gone"
		    />
	<EditText
	    android:id="@+id/et_reg_nickname"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:textColorHint="@color/hint_edittext"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_marginRight="10dp"
		android:gravity="center_vertical"
	    android:layout_toRightOf="@id/iv_reg_nickname"
		android:textSize="16sp"		
		android:textColor="#727272" 
		android:hint="@string/nickname_hint"
		android:background="#ffffff"
		android:singleLine="true"/>     
	</RelativeLayout>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:background="@color/list_view_divider"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    />
	<RelativeLayout 
	    android:id="@+id/rl_reg_valcode"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
        android:background="@drawable/bg_listview_menu">

    <ImageView 
		    android:id="@+id/iv_reg_valcode"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="20dp"
        	android:layout_marginLeft="15dp"
        	android:layout_centerVertical="true"
		    android:background="@drawable/lo_pwd"
		    android:visibility="gone"
		    />
    <Button 
	        android:id="@+id/btn_reg_val"
	        android:layout_width="wrap_content"
	        android:layout_height="30dp"
	        android:background="@drawable/btn_res_val"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="15dp"
	        android:textSize="13sp"
	        android:textColor="#ffffff"
	        android:layout_centerVertical="true"
	        />
	<EditText
	    android:id="@+id/et_reg_valcode"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:textColorHint="@color/hint_edittext"
		android:layout_marginLeft="15dp"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_marginRight="10dp"
		android:gravity="center_vertical"
	    android:layout_toLeftOf="@id/btn_reg_val"
	    android:layout_toRightOf="@id/iv_reg_valcode"
		android:textSize="16sp"		
		android:textColor="#727272" 
		android:hint="@string/valcode_hint"
		android:background="#ffffff"
		android:singleLine="true"/>     
	
	</RelativeLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="14dp"
	    >
	<CheckBox 
	    android:id="@+id/cb_agreeprotocol"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:layout_marginLeft="20dp"
	    android:checked="true"
	    />
	<TextView 
	    android:id="@+id/tv_agree"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/cb_agreeprotocol"
	    android:layout_centerVertical="true"
	    android:text="我已同意"
	    android:textSize="12sp"
	    />
	<TextView 
	    android:id="@+id/tv_protocol"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/tv_agree"
	    android:layout_centerVertical="true"
	    android:text="@string/registerprotocol"
	    android:textSize="12sp"
	    android:textColor="#0000BB"
	    />
	    
	</RelativeLayout>
	<Button 
	    android:id="@+id/btn_reg_submit"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:layout_margin="15dp"
	    android:layout_gravity="center_horizontal"
	    android:text="注     册"
	    android:textSize="16sp"
	    android:textColor="@color/white"
	    android:background="@drawable/btn_orange2gray"
	    />
</LinearLayout>
